// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package com.daml.ledger.participant.state.kvutils.store.events;

option java_package = "com.daml.ledger.participant.state.kvutils.store.events";
option java_multiple_files = true;
option csharp_namespace = "Com.Daml.Ledger.Participant.State.KVUtils.Store.Events";

import "com/daml/ledger/configuration/ledger_configuration.proto";
import "com/daml/ledger/participant/state/kvutils/store/events/rejection_reason.proto";

// This message is in it's own file because it would introduce a circular dependency if kept in `configuration.proto`

// A log entry describing a rejected configuration change.
message DamlConfigurationRejectionEntry {
  // A unique string scoped to a particular participant for matching the
  // request with the result.
  string submission_id = 1;

  // Submitting participant's id.
  string participant_id = 2;

  // The new proposed configuration that was rejected.
  com.daml.ledger.configuration.LedgerConfiguration configuration = 3;

  oneof reason {
    ParticipantNotAuthorized participant_not_authorized = 4;
    GenerationMismatch generation_mismatch = 5;
    Invalid invalid_configuration = 6;
    TimedOut timed_out = 7;
    Duplicate duplicate_submission = 8;
  }
}
